# starjeweled

./: .gitignore  CMakeLists.txt  starjeweled.pro  starjewled.pro
src/: main.cpp  mouse.cpp  mouse.h  overlay.cpp  overlay.h  screencapture.cpp  screencapture.h  solver.cpp  solver.h  x.cpp  x.hpp
